[gd_scene load_steps=8 format=3 uid="uid://cuu2bacm1yt2s"]

[ext_resource type="Script" uid="uid://iw3xy47dcepn" path="res://Scripts/main_menu.gd" id="1_28flt"]
[ext_resource type="FontFile" uid="uid://clsljof7eceka" path="res://UI_Assets/trebuc.ttf" id="2_48xlc"]
[ext_resource type="PackedScene" uid="uid://h1wytnfqjfa8" path="res://Scenes/options.tscn" id="3_ce3w2"]
[ext_resource type="AudioStream" uid="uid://xc8qn3nmw3n5" path="res://Assets_Other/Select.mp3" id="4_n45e2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ehe0"]
bg_color = Color(0.345098, 0.521569, 0.470588, 0.752941)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ce3w2"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n45e2"]
bg_color = Color(0, 0, 0, 1)
border_width_bottom = 5
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_size = 10

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_28flt")
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1ehe0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -198.0
offset_top = -223.0
offset_right = 199.0
offset_bottom = 223.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 22
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 18
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 125
text = "DRUGGO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 60
theme_override_styles/disabled = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/hover = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_n45e2")
text = "New Game"

[node name="Load" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 60
theme_override_styles/disabled = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/hover = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_n45e2")
text = "Load Game"

[node name="Bug" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 60
theme_override_styles/disabled = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/hover = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_n45e2")
text = " Bug Report / Feedback "

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 60
theme_override_styles/disabled = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/hover = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_n45e2")
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 60
theme_override_styles/disabled = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/hover = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/normal = SubResource("StyleBoxFlat_n45e2")
text = "Quit"

[node name="Title2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 30
text = "Thank you for playing!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" parent="." instance=ExtResource("3_ce3w2")]
visible = false
layout_mode = 1

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2(960, 540)
stream = ExtResource("4_n45e2")
volume_db = 3.0
bus = &"SFX"
metadata/_edit_lock_ = true

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Load" to="." method="load_pressed"]
[connection signal="pressed" from="VBoxContainer/Bug" to="." method="_on_bug_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
